# freelancer-tax-helper

./: .env.example  .gitignore  LICENSE  README.md  manuscript.md  pyproject.toml  requirements.txt  streamlit_app.py
.claude/skills/freelancer-tax/: SKILL.md
.streamlit/: config.toml  secrets.toml.example
_shared/: AUTOMATIC_REVENUE_FLOW.md  DEPLOYMENT_GUIDE.md  README.md  STARTUP_ROADMAP.md  __init__.py  constants.py  pyproject.toml
_shared/analytics/: __init__.py
_shared/auth/: __init__.py
_shared/email_helper/: __init__.py
_shared/landing/: __init__.py  streamlit_helper.py
_shared/legal_templates/: cookie_policy_kr.md  dpa_kr.md  privacy_policy_kr.md  refund_policy_kr.md  sla_kr.md  terms_of_service_kr.md
_shared/onboarding/: __init__.py
_shared/payments/: __init__.py
_shared/tests/: test_analytics.py  test_onboarding.py  test_shared_smoke.py
_shared/webhook_helper/: __init__.py  handlers.py  signature.py
api/: webhook.py
docs/: spec.md
landing/: 404.html  500.html  beauty-stylist-tax-guide.html  caregiver-nursing-tax-guide.html  delivery-rider-tax-guide.html  designer-tax-guide.html  developer-tax-guide.html  free-ebook-tax-refund-guide.html  help.html  humans.txt  index.html  instructor-tax-guide.html  lawyer-tax-guide.html  llms.txt  manifest.json  manifest.webmanifest  medical-freelancer-tax-guide.html  pharmacist-tax-guide.html  pr-journalist-tax-guide.html  privacy.html  private-tutor-tax-guide.html  researcher-academic-tax-guide.html  robots.txt  samjeomsam-vs-onceclick.html  sitemap.xml  terms.html  translator-tax-guide.html  vercel.json  writer-author-tax-guide.html  youtuber-tax-guide.html
landing/.well-known/: security.txt
src/freelancer_tax_helper/: __init__.py  categories.py  cli.py  core.py  refund.py  sidehustle_import.py
tests/: test_core.py  test_sidehustle_import.py  test_smoke.py
