[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "freelancer-tax-helper"
version = "0.1.0"
description = "한국 프리랜서 비용 처리·종소세 환급 추정·누락 경고 (헌법 §14 offline·MIT)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "조기흠" }]
requires-python = ">=3.11"
keywords = ["프리랜서", "종소세", "환급", "비용처리", "한국"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: Korean",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
freelancer-tax-helper = "freelancer_tax_helper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
pythonpath = ["src"]
